@@ -1,3 +1,8 @@
+2001-06-19  Per Bothner  <per@bothner.com>
+
+	* PrimOps.java (symbol-plist, setplist):  Comment out.
+	(get, put):  New definitions using Porcdeure getProperty/putProperty.
+
 2001-06-18  Per Bothner  <per@bothner.com>
 
 	New package.
